--- a/views/index.pug
+++ b/views/index.pug
@@ -1,23 +1,25 @@
 html
   head 
-    title="MyBank"
+    title="MyBank Home"
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet")
-  body 
+  
+  nav(class="navbar navbar-expand navbar-dark bg-dark")
     div(class="container")
-      h2(class="pb-2 border-bottom")="MyBank"
+      a(class="navbar-brand")="MyBank"
+      ul(class="navbar-nav me-auto")
+        li(class="nav-item")
+          a(class="nav-link" href="/account")="Account"
+        li(class="nav-item")
+          a(class="nav-link" href="/info")="Profile"
+        li(class="nav-item")
+          a(class="nav-link" href="/contact")="Contact Us"
+      
+      ul(class="navbar-nav ms-auto")
         if isLoggedIn
-            small 
-              a(href="/logout")="Logout"
-            
-      div(class="row")
-        div(class="col")
-          a(href="/balance")="View Account Balance"
-
-        div(class="col")
-          a(href="/account")="View Account Number"
-
-        div(class="col")
-          a(href="/info")="View Profile"
-
-        div(class="col")
-          a(href="/contact")="Contact Us"
+          li(class="nav-item")
+            a(class="nav-link active" href="/logout")="Logout"
+        else
+          li(class="nav-item")
+            a(class="nav-link active" href="/login")="Login"
+        
+        
