--- a/views/update.pug
+++ b/views/update.pug
@@ -3,12 +3,24 @@ html
     title="Update Info"
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet")
   body 
-    div(class="container mt-2")
+
+    nav(class="navbar navbar-expand navbar-dark bg-dark")
+            div(class="container")
+                a(class="navbar-brand")="MyBank"
+                ul(class="navbar-nav me-auto")
+                    li(class="nav-item")
+                        a(class="nav-link" href="/account")="Account"
+                    li(class="nav-item")
+                        a(class="nav-link disabled" href="/info")="Profile"
+                    li(class="nav-item")
+                        a(class="nav-link" href="/contact")="Contact Us"
+
+    div(class="container mt-3")
       h2(class="pb-2 border-bottom")="Update Contact Info"
 
       form(class="mt-2" method="post" action="")
 
-        div(class="form row")
+        div(class="form row mb-2")
           div(class="form-group")
               label(for="emailField")="Current E-mail Address:"
               input(type="email" readonly class="form-control-plaintext" id="oldEmailField" name="oldEmail" value=session.email)
