Modified field requirements

--- a/views/login.pug
+++ b/views/login.pug
@@ -21,10 +21,10 @@ html
 
       form(class="row g-3 mt-1" method="post" action="")
         div(class="col-auto")
-          input(type="text" class="form-control" name="username" placeholder="Username")
+          input(type="text" class="form-control" name="username" placeholder="Username" required)
 
         div(class="col-auto")
-          input( type="password" class="form-control" name="password" placeholder="Password")
+          input(type="password" class="form-control" name="password" placeholder="Password" required)
 
         div(class="row mt-3")
           div(class="col-auto")
