Added Back to Home button

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -21,3 +21,7 @@ html
             dl 
                 dt="Our Address"
                 dd="321 Main Street, Beverly Hills"
+        
+            div(class="row")
+                div(class="col-auto")
+                    a(class="btn btn-outline-dark" href="/" role="button")="Back to Home"
