--- a/views/info.pug
+++ b/views/info.pug
@@ -6,7 +6,7 @@ html
     body
         nav(class="navbar navbar-expand navbar-dark bg-dark")
             div(class="container")
-                a(class="navbar-brand")="MyBank"
+                a(class="navbar-brand" href="/")="MyBank"
                 ul(class="navbar-nav me-auto")
                     li(class="nav-item")
                         a(class="nav-link" href="/account")="Account"
