Minor UI adjustments

--- a/views/index.pug
+++ b/views/index.pug
@@ -28,7 +28,7 @@ html
     div(class="row mt-3 md-2")
       h4="What would you like to do today?"
 
-    div(class="row")
+    div(class="row mt-2")
       div(class="col")
         div(class="card" style="width: 18rem;")
           div(class="card-body")
