--- a/views/contact.pug
+++ b/views/contact.pug
@@ -1,6 +1,6 @@
 html
     head
-        title="My Info"
+        title="Contact Us"
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet")
     
     body
